--- a/chemfig/アセトアニリド.tex
+++ b/chemfig/アセトアニリド.tex
@@ -17,7 +17,7 @@
 \usepackage{nccmath}                      % 数式設定
 \usepackage[version=3]{mhchem}            % 化学
 \usepackage{chemfig}                      % 化学
-% -----------------------------------------------------------------------------------------------------------------------------------------------------------------
+% --------------------------------------------------------------------------------------------------------------------------------------
 \newcommand*{\cnumber}[1]{\raisebox{0.2ex}[0ex][0ex]{\textcircled{\scriptsize{#1}}}} % 丸数字
 \newcounter{num} % 数字
 \newcommand*{\Rnumber}[1]{\setcounter{num}{#1} \Roman{num}}   % ローマ数字大
@@ -27,14 +27,14 @@
 \newcolumntype{C}[1]{>{\hfil}m{#1}<{\hfil}}     % 表セル文字中央
 % \captionsetup[figure]{labelfont=normalsize}     % 図キャプションフォント
 % \captionsetup[table]{labelfont=normalsize}      % 表キャプションフォント
-% -----------------------------------------------------------------------------------------------------------------------------------------------------------------
+% --------------------------------------------------------------------------------------------------------------------------------------
 \titleformat{\section}{\normalfont\normalsize}{\thesection}{5pt}{}     % セクション環境設定
 \titleformat{\subsection}{\normalfont\normalsize}{\thesection}{5pt}{}  % サブセクション環境設定
-% ----------------------------------------------------------------------------------------------------------------------------------------------------------------- 
+% --------------------------------------------------------------------------------------------------------------------------------------
 \begin{document}
     \setchemfig{scheme debug=true}
-
     \scriptsize\setchemfig{bond offset=1pt,atom sep=2em,compound sep=4em,arrow coeff=1.25} 
+    % ----------------------------------------------------------------------------------------------------------------------------------
     % アセトアニリド
     \schemestart
         \chemfig{*6(-=-(-@{o4}NH2)=-=)}
@@ -84,7 +84,9 @@
     \linebreak
     \linebreak
     \linebreak
+    % ----------------------------------------------------------------------------------------------------------------------------------
     % ブロモアニリン
+    \newpage
     \schemestart
         \chemfig{@{o5}Br-[@{o6}]@{o7}Br}
         \arrow{0}[0,0.1]
@@ -110,7 +112,9 @@
     \linebreak
     \linebreak
     \linebreak
+    % ----------------------------------------------------------------------------------------------------------------------------------
     % ブロモアニリン
+    \newpage
     \schemestart
         \chemfig{*6(=-=[@{o1}](-[@{o2}]@{o3}NH_2)-=-)}
         \arrow{0}[0,0.1]
@@ -134,6 +138,4 @@
         \draw[shorten <=2pt](o7).. controls +(75:2mm) and +(0:2mm).. (o9);
         \draw[shorten <=2pt](o10)..controls +(120:3mm) and +(120:5mm)..(o11);
     }
-
-
 \end{document}
